syntax = "proto3";

package fr.rob.core.entities;

option java_outer_classname = "ServiceAuthenticationProto";

message Authentication {
  string token = 1;
}

message AuthenticationResult {
  bool result = 1;
}
